--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_fonts: ^6.2.1
   fl_chart: ^0.68.0
   data_table_2: ^2.5.15
+  image_picker: ^1.0.3
   flutter_svg: ^2.0.10+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,6 +42,7 @@ dependencies:
   firebase_core: ^3.2.0
   cloud_firestore: ^5.1.0
   firebase_auth: ^5.1.2
+  firebase_storage: ^12.1.1
 
 dev_dependencies:
   flutter_test:
