--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^5.1.0
   firebase_auth: ^5.1.2
   firebase_storage: ^12.1.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
