--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   firebase_auth: ^5.1.2
   firebase_storage: ^12.1.1
   intl: ^0.17.0
+  http: ^1.2.2
+  flutter_dotenv: ^5.0.0
+  pdf: ^3.10.0
+  printing: ^5.11.0
+
 
 dev_dependencies:
   flutter_test:
